--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
             <div id="tm-video-container">
                 <video autoplay muted loop id="tm-video">
                     <!-- <source src="video/sunset-timelapse-video.mp4" type="video/mp4"> -->
-                        <source src="video/wheat-field.mp4" type="video/mp4">
+                        <source src="/video/wheat-field.mp4" type="video/mp4">
                 </video>    
             </div>
             
@@ -50,8 +50,8 @@
                         
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
-                                <img src="img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-                                <a href="video-page.html" class="position-absolute tm-img-overlay">
+                                <img src="/img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <a href="/photo-page/<%= photos[i]._id %>" class="position-absolute tm-img-overlay">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>    
@@ -81,8 +81,8 @@
 
     </div> <!-- .tm-page-wrap -->
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <script>
         function setVideoSize() {
             const vidWidth = 1920;
