update function added

--- a/views/photo-page.ejs
+++ b/views/photo-page.ejs
@@ -42,10 +42,9 @@
 									<a href="" class="tm-bg-white tm-share-button"><i class="far fa-envelope"></i></a>
 								</div>
 								<p class="mb-4">Author: <a href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
-								<a href="#" class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
-									<i class="fas fa-heart mr-3 tm-liked-icon"></i>
-									<i class="far fa-heart mr-3 tm-not-liked-icon"></i>
-									<span id="tm-likes-count">486 likes</span>
+								<a href="/photos/edit/<%= photo._id %>" class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
+									<i class="far fa-edit"></i>
+									<span>Update Photo</span>
 								</a>
 								<div>
 									<button class="btn btn-primary p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Download Video</span></button>	
