Delete Function added

--- a/public/css/templatemo-video-catalog.css
+++ b/public/css/templatemo-video-catalog.css
@@ -179,7 +179,10 @@ h2, p { color: #666666; }
 .tm-btn-cta:hover { color: white; }
 
 .tm-btn-download:hover,
-.tm-btn-download:focus,
+.tm-btn-download:focus{
+    color: white;
+    background-color: #d12b2b;
+}
 .tm-btn-submit:hover,
 .tm-btn-submit:focus {
     color: white;
@@ -229,7 +232,7 @@ h2, p { color: #666666; }
     justify-content: center;
     background-color: rgba(0,0,0,0.4);
     cursor: pointer;
-    transition: all 0.3s ease: ;
+    transition: all 0.3s ease ;
 }
 
 .tm-overlay-icon {
