--- a/views/photo-page.ejs
+++ b/views/photo-page.ejs
@@ -47,84 +47,14 @@
 									<span>Update Photo</span>
 								</a>
 								<div>
-									<button class="btn btn-primary p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Download Video</span></button>	
+									<a href="/photo-page/<%= photo._id %>?_method=DELETE" class="btn btn-danger p-2 tm-btn-download" onclick="return confirm('Are you sure you want to delete')">
+										<i class="fas fa-trash-alt"></i>
+										<span>Delete Photo</span></a>	
 								</div>								
 							</div>
 						</div>
 					</div>
-					<div class="row pt-4 pb-5">
-						<div class="col-12">
-							<h2 class="mb-5 tm-text-primary">Related Videos for You</h2>
-							<div class="row tm-catalog-item-list">
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>    
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Nam tincidunt consectetur</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-02.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Praesent posuere rhoncus</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-03.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>                            
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Turpis massa aliquam</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-04.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>    
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Nam tincidunt consectetur</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-05.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Praesent posuere rhoncus</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-06.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>                            
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Turpis massa aliquam</h3>		                                
-		                            </div>
-		                        </div>
-		                    </div>
-						</div>
-					</div>
+					
 				</main>
 
 				<div class="container-fluid tm-content-container mx-auto pt-5">
@@ -137,19 +67,5 @@
 
 	<script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script>
-    	$(document).ready(function() {
-    		$('.tm-likes-box').click(function(e) {
-    			e.preventDefault();
-    			$(this).toggleClass('tm-liked');
-
-    			if($(this).hasClass('tm-liked')) {
-    				$('#tm-likes-count').html('486 likes');
-    			} else {
-    				$('#tm-likes-count').html('485 likes');
-    			}
-    		});
-    	});
-    </script>
 </body>
 </html>
