Add controllers folder

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
                 <main>
                     <div class="row">
                         <div class="col-12">
-                            <h2 class="tm-page-title mb-4">Our Video Catalog</h2>
+                            <h2 class="tm-page-title mb-4">Photos</h2>
                             <div class="tm-categories-container mb-5">
                                 <h3 class="tm-text-primary tm-categories-text">Categories:</h3>
                                 <ul class="nav tm-category-list">
@@ -52,7 +52,7 @@
                             <div class="position-relative tm-thumbnail-container">
                                 <img src="<%=photos[i].image %>" alt="Image" class="img-fluid tm-catalog-item-img">    
                                 <a href="/photo-page/<%= photos[i]._id %>" class="position-absolute tm-img-overlay">
-                                    <i class="fas fa-play tm-overlay-icon"></i>
+                                   
                                 </a>
                             </div>    
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
